--- a/text/bandersnatch.tex
+++ b/text/bandersnatch.tex
@@ -12,7 +12,7 @@ The singly-contextualized Bandersnatch Schnorr-like signatures $\bandersig{k}{c}
 The singly-contextualized Bandersnatch Ring\textsc{vrf} proofs $\bandersnatch{r}{c}{m}$ are a zk-\textsc{snark}-enabled analogue utilizing the Pedersen \textsc{vrf}, also defined by \cite{hosseini2024bandersnatch} and further detailed by \cite{cryptoeprint:2023/002}.
 
 \begin{align}
-  \getringroot(\seq{\bskey}) \in \ringroot &\equiv \text{commit}(\seq{\bskey})  \\
+  \getringroot(\sequence{\bskey}) \in \ringroot &\equiv \text{commit}(\sequence{\bskey})  \\
   \bandersnatch{r \in \ringroot}{c \in \hash}{m \in \blob} \subset \bloboflen{784} &\equiv \set{ x \mid x \in \bloboflen{784}, \text{verify}(r, c, m, x) = \top }  \\
   \Fbanderout{p \in \bandersnatch{r}{c}{m}} \in \hash &\equiv \text{output}(x \mid x \in \bandersnatch{r}{c}{m})_{\dots32}
 \end{align}
