--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -3,14 +3,14 @@
 We retain in state information on the most recent $\mathsf{H}$ blocks. This is used to preclude the possibility of duplicate or out of date work-reports from being submitted.
 \begin{align}
   \recent &\equiv \tup{\recenthistory, \beefybelt} \label{eq:recenthistory} \\
-  \recenthistory &\in \seq{\tuple{
+  \recenthistory &\in \sequence{\tuple{
     \isa{\rh¬headerhash}{\hash},
     \isa{\rh¬stateroot}{\hash},
     \isa{\rh¬accoutlogsuperpeak}{\hash},
     \isa{\rh¬reportedpackagehashes}{\dict{\hash}{\hash}}
   }}_{:\mathsf{H}}\\
-  \beefybelt &\in \seq{\optional{\hash}} \\
-  \lastaccout &\in \seq{\tup{\serviceid, \hash}}
+  \beefybelt &\in \sequence{\optional{\hash}} \\
+  \lastaccout &\in \sequence{\tup{\serviceid, \hash}}
 \end{align}
 
 For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\corecount = 341$).
@@ -22,7 +22,7 @@ During the accumulation stage, a value with the partial transition of this state
 
 We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\merklizewb$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function (defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
 \begin{align}
-  \using \mathbf{s} &= \sq{\se_4(s) \concat \se(h) \mid \tup{s, h} \orderedin \lastaccout'}\\
+  \using \mathbf{s} &= \sq{\fixedencode{4}{s} \concat \encode{h} \mid \tup{s, h} \orderedin \lastaccout'}\\
   \label{eq:buildbeefymap}
   \beefybelt' &\equiv \Fmmrappend{\beefybelt, \merklizewb{\mathbf{s}, \keccak}, \keccak}
 \end{align}
