--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -58,8 +58,8 @@ $\epochroot$ is the epoch's root, a Bandersnatch ring root composed with the one
 
 Finally, $\ticketaccumulator$ is the ticket accumulator, a series of highest-scoring ticket identifiers to be used for the next epoch. $\sealtickets$ is the current epoch's slot-sealer series, which is either a full complement of $\epochlen$ tickets or, in the case of a fallback mode, a series of $\epochlen$ Bandersnatch keys:
 \begin{align}
-  \ticketaccumulator \in \seq{\safroleticket}_{:\epochlen} \,,\quad
-  \sealtickets \in \seq{\safroleticket}_{\epochlen} \cup \seq{\bskey}_\epochlen
+  \ticketaccumulator \in \sequence{\safroleticket}_{:\epochlen} \,,\quad
+  \sealtickets \in \sequence{\safroleticket}_{\epochlen} \cup \sequence{\bskey}_\epochlen
 \end{align}
 
 Here, $\safroleticket$ is used to denote the set of \emph{tickets}, a combination of a verifiably random ticket identifier $\st¬id$ and the ticket's entry-index $\st¬entry$:
@@ -133,13 +133,13 @@ The header must contain a valid seal and valid \textsc{vrf} output. These are tw
 \begin{align}
     \nonumber \using i = \cyclic{\safroleticket[\H_\¬timeslot]}\colon \\
     \label{eq:ticketconditiontrue}
-    \safroleticket \in \seq{\safroleticket} &\implies \abracegroup[\,]{
+    \safroleticket \in \sequence{\safroleticket} &\implies \abracegroup[\,]{
         &i_\st¬id = \Fbanderout{\H_\¬sealsig}\,,\\
         &\H_\¬sealsig \in \bandersig{\H_\¬authorbskey}{\mathsf{X}_T \concat \entropy'_3 \append i_\st¬entry}{\seunsignedheader(\H)}\,,\\
         &\isticketed = 1
     }\\
     \label{eq:ticketconditionfalse}
-    \safroleticket \in \seq{\bskey} &\implies \abracegroup[\,]{
+    \safroleticket \in \sequence{\bskey} &\implies \abracegroup[\,]{
         &i = \H_\¬authorbskey\,,\\
         &\H_\¬sealsig \in \bandersig{\H_\¬authorbskey}{\mathsf{X}_F \concat \entropy'_3}{\seunsignedheader(\H)}\,,\\
         &\isticketed = 0
@@ -154,7 +154,7 @@ Sealing using the ticket is of greater security, and we utilize this knowledge w
 
 In addition to the entropy accumulator $\entropyaccumulator$, we retain three additional historical values of the accumulator at the point of each of the three most recently ended epochs, $\entropy_1$, $\entropy_2$ and $\entropy_3$. The second-oldest of these $\entropy_2$ is utilized to help ensure future entropy is unbiased (see equation \ref{eq:ticketsextrinsic}) and seed the fallback seal-key generation function with randomness (see equation \ref{eq:slotkeysequence}). The oldest is used to regenerate this randomness when verifying the seal above (see equations \ref{eq:ticketconditionfalse} and \ref{eq:ticketconditiontrue}).
 \begin{align}\label{eq:entropycomposition}
-  \entropy &\in \seq{\hash}_4
+  \entropy &\in \sequence{\hash}_4
 \end{align}
 
 $\entropyaccumulator$ defines the state of the randomness accumulator to which the provably random output of the \textsc{vrf}, the signature over some unbiasable input, is combined each block. $\entropy_1$, $\entropy_2$ and $\entropy_3$ meanwhile retain the state of this accumulator at the end of the three most recently ended epochs in order.
@@ -195,15 +195,15 @@ The posterior slot key sequence $\safroleticket$ is one of three expressions dep
 Here, we use $Z$ as the outside-in sequencer function, defined as follows:
 \begin{equation}
   Z\colon\abracegroup[\,]{
-    \seq{\safroleticket}_\epochlen &\to \seq{\safroleticket}_\epochlen\\
+    \sequence{\safroleticket}_\epochlen &\to \sequence{\safroleticket}_\epochlen\\
     \mathbf{s} &\mapsto \sq{\mathbf{s}_0, \mathbf{s}_{\len{\mathbf{s}} - 1}, \mathbf{s}_1, \mathbf{s}_{\len{\mathbf{s}} - 2}, \dots}\\
   }
 \end{equation}
 
-Finally, $F$ is the fallback key sequence function which selects an epoch's worth of validator Bandersnatch keys ($\seq{\bskey}_{\epochlen}$) from the validator key set $\mathbf{k}$ using the entropy collected on-chain $r$:
+Finally, $F$ is the fallback key sequence function which selects an epoch's worth of validator Bandersnatch keys ($\sequence{\bskey}_{\epochlen}$) from the validator key set $\mathbf{k}$ using the entropy collected on-chain $r$:
 \begin{equation}\label{eq:fallbackkeysequence}
   F\colon \abracegroup[\ ]{
-    \tuple{\hash,\,\seq{\valkey}} &\to \seq{\bskey}_\epochlen\\
+    \tuple{\hash,\,\sequence{\valkey}} &\to \sequence{\bskey}_\epochlen\\
     \tup{r,\, \mathbf{k}} &\mapsto \left[
     \cyclic{\mathbf{k}[\de(\blake_4(r \concat \mathcal{E}_4(i)))]}_\vk¬bs
     \middle\vert\; i \in \epochindex
@@ -262,7 +262,7 @@ Towards the end of the epoch (\ie $\mathsf{Y}$ slots from the start) this contes
 
 We define the extrinsic as a sequence of proofs of valid tickets, each of which is a tuple of an entry index (a natural number less than $\ticketentries$) and a proof of ticket validity. Formally:
 \begin{align}\label{eq:ticketsextrinsic}
-  \xttickets &\in \seq{\tuple{
+  \xttickets &\in \sequence{\tuple{
     \isa{\xt¬entry}{\Nmax{\ticketentries}},\,
     \isa{\xt¬proof}{\bandersnatch{\epochroot'}{\mathsf{X}_T \concat \entropy'_2 \append \xt¬entry}{\sq{}}}
   }} \\
